cmake_minimum_required (VERSION 2.8)
project(DUOSamples)

# Get DUO_SDK install path from environment variable if set
if(DEFINED ENV{DUO_SDK})
  set(DUO_SDK $ENV{DUO_SDK} )
else()
  set(DUO_SDK ${CMAKE_CURRENT_SOURCE_DIR}/../SDK)
endif()

# Add DUO include and lib
include_directories(${DUO_SDK}/include)

# Detect Compiler / Arch and add libraries
if(MSVC)
  if(CMAKE_CL_64) 
    set(DUOLib_ARCH x64)
  else() 
    set(DUOLib_ARCH x86)
  endif()
  if(MSVC_VERSION EQUAL 1600)
    set(DUOLib_RUNTIME msvc2010)
  elseif(MSVC_VERSION EQUAL 1700)
    set(DUOLib_RUNTIME msvc2012)
  endif() 
  link_directories(${DUO_SDK}/windows/${DUOLib_RUNTIME}/${DUOLib_ARCH})
  file(TO_NATIVE_PATH ${DUO_SDK}/windows/${DUOLib_RUNTIME}/${DUOLib_ARCH}/DUOLib.dll SRC)
  file(TO_NATIVE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin/. DST)
  execute_process(COMMAND cmd /c copy /y ${SRC} ${DST})
  # Set output directory for binaries
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin )
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin )
elseif(APPLE)
  link_directories(${DUO_SDK}/osx/x64/)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
elseif(UNIX)
  if(CMAKE_SIZEOF_VOID_P EQUAL 8)
    set(DUOLib_ARCH x64)
  else() 
    set(DUOLib_ARCH x86)
  endif()
  link_directories(${DUO_SDK}/linux/${DUOLib_ARCH}/)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
endif()

add_subdirectory(Sample-01)
add_subdirectory(Sample-02)
add_subdirectory(Sample-03)
add_subdirectory(Sample-04)
add_subdirectory(Sample-05)
add_subdirectory(Sample-06)