find_package(OpenCV REQUIRED)
set(ProjectName Sample-06)
project(${ProjectName})
set(Project_SRC Sample.cpp)
add_executable(${ProjectName} ${Project_SRC}) 
if(WIN32)
	target_link_libraries(${ProjectName} DUOlib ${OpenCV_LIBRARIES})
elseif(UNIX OR APPLE)
	target_link_libraries(${ProjectName} duo ${OpenCV_LIBRARIES}) 
endif()